--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    background:blur(15px);
-    background:url(mount.jpg);
+    background-color:#40bdda;
 background-position: center;
 background-size: cover;
     display: flex;
