--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color:#40bdda;
+    background-color:#3b1946;
 background-position: center;
 background-size: cover;
     display: flex;
@@ -32,12 +32,11 @@ background-size: cover;
 }
 
 .container {
-    background-color: white;
+    background-color: rgb(226, 234, 236);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
-    background: transparent;
     border-radius:2%;
     box-shadow: 1px 1px 10px 2px rgb(103, 104, 104);
     border:none;
@@ -54,7 +53,7 @@ background-size: cover;
 h2 {
     text-align: center;
     margin-bottom: 20px;
-    color:whitesmoke;
+    color:black;
 }
 
 .input-group {
